mmware_server/ros2scripts/first_pubsub/log/build_2020-08-13_01-11-01/py_pubsub/stderr.log
  File "/home/soumya/mmware_mmwareserver/ros2/ros2scripts/first_pubsub/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/ros2_kafka_bridge_pub.py", line 43
    print msg
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(msg)?

